--- a/docs/src/app/(public)/(content)/react/components/form/demos/hero/css-modules/index.module.css
+++ b/docs/src/app/(public)/(content)/react/components/form/demos/hero/css-modules/index.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
+  max-width: 16rem;
 }
 
 .Field {
@@ -23,7 +25,7 @@
   padding-left: 0.875rem;
   margin: 0;
   border: 1px solid var(--color-gray-200);
-  width: 16rem;
+  width: 100%;
   height: 2.5rem;
   border-radius: 0.375rem;
   font-family: inherit;
